# uc-intg-jellyfin

./: Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_jellyfin/: __init__.py  __main__.py  browser.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  sensor.py  setup.py  setup_flow.py
